Add Ollama and variety of changes

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
+  "Settings": {
+    "LlmProvider": "Ollama"
+  },
   "OpenAI": {
     "ModelId": "gpt-4o-mini",
     "ChatModelId": "gpt-4o-mini",
     "EmbeddingModelId": "gpt-4o-mini",
     "ApiKey": ""
+  },
+  "Ollama": {
+    "ModelId": "llama3.2:1b",
+    "EmbeddingModelId": "llama3.2:1b",
+    "Endpoint": "http://localhost:11434"
   }
 }
